# mynewsletters

./: .env.example  .gitignore  AGENTICS_PLAN.md  README.md  poc_feed_tester.py  poc_fix_dead_feeds.py  poc_github_models.py  poc_reddit_feeds.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  newsletter.yml
data/: rdradar.json
docs/plans/: 2026-02-25-newsletter-agent-design.md  2026-02-25-newsletter-agent-plan.md  2026-02-28-recency-cache-design.md  2026-02-28-recency-cache-impl.md  2026-02-28-telegram-format-design.md  2026-02-28-telegram-format-impl.md
pipeline/: deliver.py  fetch.py  normalize.py  publish.py  rank.py  summarize.py  validate_feeds.py
schemas/: story.py
scrapers/: api.py  html.py  rss.py
scripts/: test_llm_local.py
sources/: sdlc_enterprise.yaml  sources.yaml
tests/: test_schemas.py  test_smoke.py
tests/pipeline/: test_deliver.py  test_fetch.py  test_normalize.py  test_publish.py  test_rank.py  test_summarize.py  test_validate_feeds.py
tests/scrapers/: test_api.py  test_html.py  test_rss.py
